typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors1.ts.stderr
error: A 'get' accessor must return a value.
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors1.ts:3:9
  |
3 |     get Foo() { }
  |         ^^^

